[package]
name = "interledger-service"
version = "0.2.2-beta.2"
authors = ["Evan Schwartz <evan@ripple.com>"]
description = "The core abstraction for the Interledger.rs implementation"
license = "Apache-2.0"
edition = "2018"
repository = "https://github.com/interledger-rs/interledger-rs"

[features]
default = ["trace"]
trace = ["tracing", "uuid"]

[dependencies]
futures = "0.1.25"
interledger-packet = { path = "../interledger-packet", version = "^0.2.2-alpha.1"}
serde = { version = "1.0.99", features = ["derive"] }
base64 = "0.10.1"
regex = "1.2.1"
lazy_static = "1.4.0"
tracing = { version = "0.1", optional = true }
unicase = "2.4.0"
unicode-normalization = "0.1.8"
uuid = { version = "0.7.4", optional = true }

[dev-dependencies]
serde_json = "1.0.40"
